--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         solution to promote your banking </p>
 
                     <div class="btn">
-                        <a href="registration.html">Get started</a>
+                        <a href="./Easy-banking/registration.html">Get started</a>
                     </div>
                 </div>
 
