--- a/registration/registration.html
+++ b/registration/registration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="./images/logo img.svg" alt="Tolxxy Bank Logo">
+        <img src="../images/logo img.svg" alt="Tolxxy Bank Logo">
         <h3>TOLXXY BANK</h3>
     </div>
     <div class="container">
