--- a/registration/registration.html
+++ b/registration/registration.html
@@ -39,6 +39,10 @@
                 <label for="bvn">BVN</label>
                 <input type="text" id="bvn" name="bvn" required>
             </div>
+
+            <input type="button" value="Register" class="registration-button" onclick="authenticateBtn()">
+
+            <p>Already a registered member? <a href="login.html"> Login</a></p>
         </form>
     </div>
 </body>
