--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Tolxxy-Bank/Dashboard</title>
     <link rel="stylesheet" href="./dashboard.css">
+    <link rel="icon" href="../images/logo img.svg">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
 </head>
