increased icons and added favicon to all links

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Tolxxy-bank/Dashboard</title>
     <link rel="stylesheet" href="./dashboard.css">
+    <link rel="icon" href="../images/logo img.svg">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"/>
 </head>
@@ -60,21 +61,21 @@
             </div>
 
             <div class="card">
-                <div class="transfer">
+                <div class="transfer" onclick="window.location.href='money-transfer.html'">
                     <i class="ri-exchange-dollar-line"></i>
                     <div class="text">
                         <h4>Transfer</h4> 
                         <p>Transfer to other banks</p>
                     </div>
                 </div>
-                <div class="withdraw">
+                <div class="withdraw" onclick="window.location.href='money-withdraw.html'">
                     <i class="ri-wallet-3-line"></i>
                     <div class="text">
                         <h4>Withdraw</h4> 
                         <p>Widthdraw to your account</p>
                     </div>
                 </div>
-                <div class="deposit">
+                <div class="deposit" onclick="window.location.href='money-deposit.html'">
                     <i class="ri-safe-2-line"></i>
                     <div class="text">
                         <h4>Deposit</h4> 
