--- a/registration/registration.html
+++ b/registration/registration.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration for Tolxxy Bank</title>
+    <title>Tolxxy-bank/User Registration for Tolxxy Bank</title>
     <link rel="stylesheet" href="./registration.css">
+    <link rel="icon" href="../images/logo img.svg">
 </head>
 <body>
     <div class="logo">
