--- a/verify account/verify-account.html
+++ b/verify account/verify-account.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account Verification</title>
+    <title>Tolxxy-bank/Account Verification</title>
     <link rel="stylesheet" href="./verify-account.css">
+    <link rel="icon" href="../images/logo img.svg">
 </head>
 <body>
     <div class="logo">
