--- a/verifying/verifying.html
+++ b/verifying/verifying.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Verification</title>
     <link rel="stylesheet" href="./verifying.css">
+    <link rel="icon" href="../images/logo img.svg">
 </head>
 <body>
     <div class="logo">
