deposit page in progress

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -18,10 +18,10 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li onclick="window.location.href='dashboard.html'"><i class="ri-dashboard-line"></i>Dashboard</li>
-                    <li onclick="window.location.href='payment.html'"><i class="ri-currency-line"></i>Payment</li>
-                    <li onclick="window.location.href='recent-transaction.html'"><i class="ri-history-line"></i>Recent Transaction</li>
-                    <li onclick="window.location.href='transfer.html'"><i class="ri-exchange-dollar-line"></i>Transfer</li>
+                    <li onclick="window.location.href='account-home.html'"><i class="ri-home-3-line"></i>Home</li>
+                    <li onclick="window.location.href='beneficiaries.html'"><i class="ri-user-add-line"></i>Beneficiaries</li>
+                    <li onclick="window.location.href='recent-transaction.html'"><i class="ri-history-line"></i>Recent transactions</li>
+                    <li onclick="window.location.href='support.html'"><i class="ri-hand-heart-line"></i>Support</li>
                 </ul>
 
                 <ul>
@@ -68,13 +68,7 @@
                         <p>Transfer to other banks</p>
                     </div>
                 </div>
-                <div class="withdraw" onclick="window.location.href='money-withdraw.html'">
-                    <i class="ri-wallet-3-line"></i>
-                    <div class="text">
-                        <h4>Withdraw</h4> 
-                        <p>Widthdraw to your account</p>
-                    </div>
-                </div>
+               
                 <div class="deposit" onclick="window.location.href='money-deposit.html'">
                     <i class="ri-safe-2-line"></i>
                     <div class="text">
@@ -82,7 +76,16 @@
                         <p>Deposit money from other banks</p>
                     </div>
                 </div>
+                        <div class="bill-payment" onclick="window.location.href='money-deposit.html'">
+                    <i class="ri-bill-line"></i>
+                    <div class="text">
+                        <h4>Bill Payment</h4> 
+                        <p>Pay your bills </p>
+                    </div>
+                </div>
             </div>
+
+
 
             <h3 class="note">Recent Transactions</h3>
             <div class="recent">
