--- a/registration/registration.html
+++ b/registration/registration.html
@@ -14,6 +14,8 @@
     </div>
     <div class="container">
         <form class="form-container">
+            <h2>Welcome, Let's get you started</h2>
+            <p>Please provide your information below to create an internet banking profile</p>
             <div class="username">
                 <div class="form-group">
                    <label for="firstName">First Name</label>
@@ -43,7 +45,7 @@
 
             <input type="button" value="Register" class="registration-button" onclick="authenticateBtn()">
 
-            <p>Already a registered member? <a href="login.html"> Login</a></p>
+            <p class="login">Already a registered member? <a href="login.html"> Login</a></p>
         </form>
     </div>
 </body>
