--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -18,15 +18,23 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li onclick="window.location.href='account-home.html'"><i class="ri-home-3-line"></i>Home</li>
-                    <li onclick="window.location.href='beneficiaries.html'"><i class="ri-user-add-line"></i>Beneficiaries</li>
-                    <li onclick="window.location.href='recent-transaction.html'"><i class="ri-history-line"></i>Recent transactions</li>
-                    <li onclick="window.location.href='support.html'"><i class="ri-hand-heart-line"></i>Support</li>
+                    <!-- <li onclick="window.location.href='account-home.html'"><i class=""></i>Home</li>
+                    <li onclick="window.location.href='beneficiaries.html'"><i class=""></i>Beneficiaries</li>
+                    <li onclick="window.location.href='recent-transaction.html'"><i class=""></i>Recent transactions</li>
+                    <li onclick="window.location.href='support.html'"><i class=""></i>Support</li> -->
+
+                    <li><a href="../dashboard/dashboard.html"><i class="ri-home-3-line"></i>Home</a></li>
+                    <li><a href=""><i class="ri-user-add-line"></i>Beneficiaries</a></li>
+                    <li><a href=""><i class="ri-history-line"></i>Recent Transactions</a></li>
+                    <li><a href=""><i class="ri-hand-heart-line"></i>Support</a></li>
                 </ul>
 
                 <ul>
-                    <li onclick="window.location.href='settings.html'"><i class="ri-settings-3-line"></i>Settings</li>
-                    <li onclick="window.location.href='logout.html'" id="logout"><i class="ri-logout-box-line"></i>Log out</li>
+                    <!-- <li onclick="window.location.href='settings.html'"><i class=""></i>Settings</li>
+                    <li onclick="window.location.href='logout.html'" ><i class=""></i>Log out</li> -->
+
+                    <li><a href=""><i class="ri-settings-3-line"></i>Settings</a></li>
+                    <li><a href="" id="logout"><i class="ri-logout-box-line"></i>Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -61,28 +69,28 @@
             </div>
 
             <div class="card">
-                <div class="transfer" onclick="window.location.href='money-transfer.html'">
+                <a href="" class="transfer">
                     <i class="ri-exchange-dollar-line"></i>
                     <div class="text">
                         <h4>Transfer</h4> 
                         <p>Transfer to other banks</p>
                     </div>
-                </div>
+                </a>
                
-                <div class="deposit" onclick="window.location.href='money-deposit.html'">
+                <a href="../deposit/money-deposit.html" class="deposit">
                     <i class="ri-safe-2-line"></i>
                     <div class="text">
                         <h4>Deposit</h4> 
                         <p>Deposit money from other banks</p>
                     </div>
-                </div>
-                        <div class="bill-payment" onclick="window.location.href='money-deposit.html'">
+                </a>
+                <a href="" class="bill-payment">
                     <i class="ri-bill-line"></i>
                     <div class="text">
                         <h4>Bill Payment</h4> 
                         <p>Pay your bills </p>
                     </div>
-                </div>
+                </a>
             </div>
 
 
